force-app/main/default/objects/Product_Approval_List__c/Product_Approval_List__c.object-meta.xml
<CustomObject>
    <label>Product Approval List</label>
    <nameField>
        <displayFormat>PL-{00000000}</displayFormat>
        <label>Price Limit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>