force-app/main/default/objects/Product_Approval_List__c/fields/Factory_Packing__c.field-meta.xml
<CustomField>
    <fullName>Factory_Packing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factory Packing</label>
    <referenceTo>Factory__c</referenceTo>
    <relationshipLabel>Packing</relationshipLabel>
    <relationshipName>Packing</relationshipName>
    <type>Lookup</type>
</CustomField>