force-app/main/default/objects/Product_Approval_List__c/fields/factory_product__c.field-meta.xml
<CustomField>
    <fullName>factory_product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factory Product</label>
    <referenceTo>Factory__c</referenceTo>
    <relationshipLabel>Grades</relationshipLabel>
    <relationshipName>Grades</relationshipName>
    <type>Lookup</type>
</CustomField>