force-app/main/default/objects/Product_Approval_List__c/fields/floor_price__c.field-meta.xml
<CustomField>
    <fullName>floor_price__c</fullName>
    <label>Floor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>