force-app/main/default/objects/Product_Approval_List__c/recordTypes/Grade.recordType-meta.xml
<RecordType>
    <fullName>Grade</fullName>
    <active>true</active>
    <label>Grade</label>
</RecordType>