force-app/main/default/objects/Product_Approval_List__c/recordTypes/Packing.recordType-meta.xml
<RecordType>
    <fullName>Packing</fullName>
    <active>true</active>
    <label>Packing</label>
</RecordType>