force-app/main/default/objects/Product_Approval_List__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Default__c</columns>
    <columns>Product__c</columns>
    <columns>Factory_Packing__c</columns>
    <columns>factory_product__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>